feat: add `refreshToken` logic
